# Vulkan-Renderer

./: .gitignore  BloomBlurFragmentShader.hlsl  BloomCompositeFragmentShader.hlsl  CMakeLists.txt  ColorFind.h  Defines.h  FragmentShader.hlsl  FragmentShader_PBR.hlsl  FullscreenVertexShader.hlsl  Gateware.h  ShadowFragmentShader.hlsl  ShadowVertexShader.hlsl  SkyboxFragmentShader.hlsl  SkyboxVertexShader.hlsl  TextureUtils.h  ThirdParty.cpp  VertexShader.hlsl  main.cpp  renderer.h
App/: AppConfig.h  Application.cpp  Application.h  CameraController.cpp  CameraController.h  FrameTimer.h
Core/: GatewareConfig.h
Materials/: FragmentShader_PBR.hlsl  TextureUtilsKTX.h  deferred rendering.pptx
Models/: WaterBottle.gltf
Platform/: InputSystem.cpp  InputSystem.h
RHI/Vulkan/: VulkanBuffer.h  VulkanImage.h  VulkanRenderTarget.h  VulkanResourceUtils.cpp  VulkanResourceUtils.h
Render/: RenderConfig.h  Renderer.cpp  Renderer.h
Scene/: Camera.h  EnvironmentSettings.h  Light.h  Material.h  Mesh.h  MeshInstance.h  Scene.h  SceneLoader.cpp  SceneLoader.h  SceneTypes.h  Texture.h  Transform.h
Sponza/glTF/: Sponza.gltf
assets/: GltfImporter.cpp  GltfImporter.h  ImportedScene.h
